# gencad-rs

./: .gitattributes  Cargo.toml  README.md
examples/: fpextract.rs  parse.rs
src/: lib.rs  parser.rs  serialization.rs
src/interpreter/: mod.rs
src/parser/: mod.rs
src/parser/sections/: board.rs  components.rs  devices.rs  header.rs  pads.rs  padstacks.rs  shapes.rs  signals.rs  unknown.rs
src/parser/sections/tests/: board.rs  components.rs  devices.rs  header.rs  mod.rs  pads.rs  padstacks.rs  shapes.rs  signals.rs
src/parser/tests/: mod.rs
src/parser/tests/fixtures/: example.cad
src/parser/types/: aliases.rs  arc_ref.rs  attrib_ref.rs  booleans.rs  circle_ref.rs  dimension.rs  layer.rs  line_ref.rs  mirror.rs  mod.rs  number.rs  p_integer.rs  pad_type.rs  rectangle_ref.rs  string.rs  text_par.rs  util.rs  x_y_ref.rs
src/parser/types/tests/: arc_ref.rs  attrib_ref.rs  booleans.rs  circle_ref.rs  dimension.rs  layer.rs  line_ref.rs  mirror.rs  mod.rs  number.rs  p_integer.rs  pad_type.rs  rectangle_ref.rs  string.rs  text_par.rs  util.rs  x_y_ref.rs
src/sections/: board.rs  components.rs  devices.rs  header.rs  mod.rs  pads.rs  padstacks.rs  shapes.rs  signals.rs  unknown.rs
src/types/: aliases.rs  arc_ref.rs  attrib_ref.rs  booleans.rs  circle_ref.rs  dimension.rs  layer.rs  line_ref.rs  mirror.rs  mod.rs  number.rs  p_integer.rs  pad_type.rs  rectangle_ref.rs  string.rs  text_par.rs  util.rs  x_y_ref.rs
tests/: integration_tests.rs
